GNOME Bugzilla – Bug 654843
MultiLoadAppletFactory::MultiLoadApplet
Last modified: 2012-06-25 12:42:27 UTC
Virtually every time I login to GNOME the System Load applet disappears and the following window pops-out. The panel encountered a problem while loading MultiLoadAppletFactory::MultiLoadApplet Do you want to delete the applet from your configuration? A always hit Don't remove button and after I relogin, the System Load applet is back and running OK. My configuration is: Unbuntu 11.04 GNOME 2.32.1 System Load applet 2.32.1.1
Did you file a bug report against your distribution? As I see Ubuntu 11.04, do you use Unity?
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for. Thanks!
Sorry, previous mail must have slipped through my inbox. To answer your questions André. No, I do not use Unity, just GNOME (with default Compiz). And no, I did not report it on Launchpad because there are number of similar bugs (some of them really old) and are unresolved. I hope someone of GNOME devs may have help me.
(In reply to comment #3) > because there are number of similar > bugs (some of them really old) and are unresolved. Links are welcome...
He is list http://goo.gl/mp7g1 Can I do something on my side when bug occurs? Do you want some logs or configuration of something? Thanks for your help!
I see the same error, but with randomly changing applets that will not load - on every occurence it is only one of them. Here is a list: MultiLoadAppletFactory::MultiLoadApplet GWeatherAppletFactory::GWeatherApplet MixerAppletFactory::MixerApplet ClockAppletFactory::ClockApplet (that is the only one where I am not sure it was ever affected) NotificationAreaAppletFactory::NotificationArea WnckletFactory::ShowDesktopApplet TrashAppletFactory::TrashApplet NullApplet is also loaded. ~.xsessionerrors reports ** (gnome-panel:1525): WARNING **: Failed to load applet MixerAppletFactory::MixerApplet: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: Keine derartige Schnittstelle »org.gnome.panel.applet.AppletFactory« des Objekts im Pfad /org/gnome/panel/applet/MixerAppletFactory System is the same, Ubuntu 11.04 with Gnome 2.32.1(.1), Classical Desktop See also the report here: http://ubuntuforums.org/showthread.php?t=1844026
I can confirm this on Debian, gnome-panel-3.0.2-1, usually with either the gnote or the link-monitor-applet, but also occasionally with the multiload applet.
This might be a duplicate of 650017. https://bugs.launchpad.net/ubuntu/+source/gnome-applets/+bug/727660 mentions that it might be related to auto-login, which I do use, but I also observe this when re-logging in.
The race condition might be between panel_applet_factory_register_service, which registers the dbus service, and sets up a callback for GBusNameAcquiredCallback and the callback function on_name_acquired(), which actually registers the object with the service. On the gnome-panel side, the method is called in on_factory_appeared(). This is triggered when the PANEL_APPLET_BUS_NAME "org.gnome.panel.applet.%s" becomes available. So indeed, it is possible that the dbus server will flag the availability of the busname to the gnome-panel before the applet had time to register the object.
According to the documentation http://developer.gnome.org/gio/2.26/gio-Owning-Bus-Names.html#g-bus-own-name one can add object before the name is available by using another callback function. The attached patch implements this. It’s a bit hard to test that a callback function does not exist any more, but at least stuff still works.
Created attachment 201328 [details] [review] Possible fix.
Just a quick query: What is the status of this bug? I have to keep patching my distribution packages to get that fix, and it is getting annoying...
I have been using the patch for several months now and it reliably makes the problem disappear, while it reliably appears without it. I’d appreciate if the patch could be applied to libpanel-applets. Maybe this bug needs to be reassigned to the correct component first?
Comment on attachment 201328 [details] [review] Possible fix. Thanks, this looks good, I've pushed this!
*** Bug 669781 has been marked as a duplicate of this bug. ***
I forgot to close the bug, sorry for the spam.
*** Bug 650017 has been marked as a duplicate of this bug. ***
*** Bug 637219 has been marked as a duplicate of this bug. ***