libpanel-applet: Use on_bus_acquired instead of on_name_acquired

This helps prevent race conditions at session starts. This is actually
recommended in the gdbus documentation.

https://bugzilla.gnome.org/show_bug.cgi?id=654843